kustomize/base/02-user-mgt-api-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: user-mgt-api-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      component: user-mgt-api
  template:
    metadata:
      labels:
        component: user-mgt-api
    spec:
      containers:
        - name: user-mgt-api
          image: dndascale/user-management-api:2.0.0
          ports:
            - containerPort: 5000
---
apiVersion: v1
kind: Service
metadata:
  name: user-mgt-api-cluster-ip-service
spec:
  type: ClusterIP
  selector:
    component: user-mgt-api
  ports:
    - port: 5000
      targetPort: 5000
